--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,23 @@
 workflows:
-  workflow:
-    name: Android Workflow
-
-    max_build_duration: 120
-
+  android-release:
+    name: Android Release
     instance_type: mac_mini_m2
+    environment:
+      groups:
+        - keystore
+      vars:
+        CM_KEYSTORE_PATH: 'my-release-key.keystore'
+    scripts:
+      - name: Decode keystore
+        script: |
+          echo $CM_KEYSTORE | base64 --decode > $CM_KEYSTORE_PATH
+      - name: Build Android release
+        script: |
+          cd android
+          ./gradlew assembleRelease
+    artifacts:
+      - android/app/build/outputs/apk/release/app-release.apk
+    publishing:
+      email:
+        recipients:
+          - sarangagunasekara20@gmail.com
