--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,6 +11,10 @@ workflows:
       - name: Decode keystore
         script: |
           echo $CM_KEYSTORE | base64 --decode > my-release-key.keystore
+      - name: Make gradlew executable
+        script: |
+          cd android
+          chmod +x gradlew
       - name: Build Android release
         script: |
           cd android
