Update keystore decoding path in Codemagic workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,7 +16,7 @@ workflows:
           echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/android/local.properties"
       - name: Decode keystore
         script: |
-          echo $CM_KEYSTORE | base64 --decode > my-release-key.keystore
+          echo $CM_KEYSTORE | base64 --decode > ./android/app/my-release-key.keystore
       - name: Make gradlew executable
         script: |
           cd android
