--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,14 @@ workflows:
         - keystore
       vars:
         CM_KEYSTORE_PATH: './android/app/my-release-key.keystore'
+    triggering:
+      events:
+        - push
+      branch_patterns:
+        - pattern: 'production'
+          include: true
+          source: true
+      cancel_previous_builds: true
     scripts:
       - name: Install yarn dependencies
         script: |
